--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ ansi-diff = "1.0.0"
 async-std = "1.10.0"
 cable = { path = "../cable.rs" }
 argmap = "1.1.1"
-
+term_size = "0.3.2"
+signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
