--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ argmap = "1.1.1"
 term_size = "0.3.2"
 signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
 time-format = "1.1.2"
+futures = "0.3.13"
+indoc = "1.0.3"
