raw tty but doesn't work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" 
 time-format = "1.1.2"
 futures = "0.3.13"
 indoc = "1.0.3"
+raw_tty = "0.1.0"
