--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.9.0"
 futures = "0.3.13"
 indoc = "1.0.3"
 log = "0.4.0"
+owo-colors = "3.5.0"
 raw_tty = "0.1.0"
 signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
 term_size = "0.3.2"
